# windows-xp-minesweeper-hack

./: .gitignore  CMakeLists.txt  Minesweet.sln  README.md  build.sh
Minesweet/: Minesweet.vcxproj  Minesweet.vcxproj.filters  main.c  main.h
dbg/: winmine.idb
include/: app.h  main.h  main.h.gch  proc.h
src/: app.cpp  main.cpp  main.h  proc.cpp
